[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["daheige"]
description = "rust infras"

[workspace]
resolver = "3"

members = [
    "crates/config",
    "crates/crypto",
    "crates/logger",
    "crates/monitor",
    "crates/shutdown",
    "crates/xmysql",
    "crates/xredis",
    "crates/xpulsar"
]

[workspace.dependencies]
# serde
serde_yaml = "0.9.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# crypto
aes = "0.8.4"
cbc = "0.1.2"
rand = "0.9.2"
base64 = "0.22.1"

# logger
log = "0.4.28"
env_logger = { version = "0.11.8", features = ["color"] }
chrono = "0.4.42"

# autometrics-rs for auto prometheus metrics sla
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }
axum = { version = "0.8.6" }

tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "time"] }
futures = "0.3.31"

# redis use tokio async
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp", "cluster", "cluster-async", "json"] }
r2d2 = "0.8.10"

# pulsar
pulsar = "6.5.0"
