[workspace.package]
version = "1.2.0"
edition = "2024"
authors = ["daheige"]
description = "rust infras"
keywords = ["infras", "rs-infras", "mysql", "redis", "pulsar"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/hera"

[workspace]
resolver = "3"

members = [
    "crates/config",
    "crates/crypto",
    "crates/logger",
    "crates/monitor",
    "crates/shutdown",
    "crates/xmysql",
    "crates/xredis",
    "crates/xpulsar"
]

[workspace.dependencies]
# serde
serde_yaml = "0.9.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# crypto
aes = "0.9.0"
cbc = "0.2.0"
rand = "0.10.1"
base64 = "0.22.1"

# logger
log = "0.4.29"
env_logger = { version = "0.11.10", features = ["color"] }
chrono = "0.4.44"

# autometrics-rs for auto prometheus metrics sla
autometrics = { version = "3.0.0", features = ["prometheus-exporter"] }
axum = "0.8.9"

tokio = { version = "1.52.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "time"] }
futures = "0.3.32"

# redis use tokio async
redis = { version = "1.2.1", features = ["r2d2", "tokio-comp", "cluster", "cluster-async", "json"] }
r2d2 = "0.8.10"

# pulsar
pulsar = "6.7.2"
